# ds-caselaw-pdf-conversion

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  base.xcd  docker-compose-localstack.yml  docker-compose.yaml  docker-compose.yml  queuelistener.dockerfile  renovate.json  run-tests.sh  setup.cfg
.github/workflows/: ci.yml  codeql.yml  release.yml  secrets.yml
aws-config/: s3-notify.json
aws_examples/s3/: example-message.json  s3-notif-config.json
data/: judgment.docx
docker_context/: fonts.conf  pyproject.toml  registrymodifications.xcu
ds-caselaw-pdf-conversion/: lambda_function.py
fonts/: SIL Open Font License.txt  fontconfig.conf
queue_listener/: conftest.py  queue_listener.py  test_integration.py  test_unit.py  tests.py
requirements/: base.txt
scripts/: create_json_for_bulk_pdf_regeneration  delete_docs.sh  make_json.py  send_message.sh  setup-localstack.sh  start-localstack.sh  update-lambda.sh  upload_custom_pdf.sh  upload_file.sh  upload_named_file.sh
