[tool.poetry]
name = "libreoffice-with-msfonts"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Laura Porter <laura@dxw.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"
boto3 = "^1.24.0"
python-dotenv = "^1.0.0"
rollbar = "^1.0.0"
urllib3 = "<2"
[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
