[tool.poetry]
name = "libreoffice-with-msfonts"
package-mode = false
version = "0.1.0"
description = ""
authors = ["Laura Porter <laura@dxw.com>"]

[tool.poetry.dependencies]
python = "3.14.4"
boto3 = "1.42.91"
python-dotenv = "1.2.2"
rollbar = "1.3.0"
urllib3 = "==2.6.3"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.0"
moto = "^5.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
